<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="titulacion.sise.canchala10.CobroActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/primary_light"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/titulo_cobro"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/primary_light"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/tvNroTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/numeroTarjeta"
                android:inputType="numberDecimal"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColorHint="@color/accent" />
            <EditText
                android:id="@+id/tvNombreCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/nombre"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColorHint="@color/accent"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/tvMes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/mes"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColorHint="@color/accent" />
                <EditText
                    android:id="@+id/tvAnio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/anio"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColorHint="@color/accent" />
                <EditText
                    android:id="@+id/tvCvv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/cvv"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColorHint="@color/accent" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/primary"
        android:onClick="PagarTarjeta"
        android:padding="5dp"
        android:text="@string/pagar"
        android:textColor="@color/primary_light" />
</LinearLayout>
